samples/_failures_safe/1761333897_749b34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71cd58fc.c: In function ‘process_tokens_with_stack’:
./samples/SAFE/__tmp_71cd58fc.c:161:13: error: expected declaration or statement at end of input
  161 |             printf("  Pushed to stack\n");
      |             ^~~~~~
./samples/SAFE/__tmp_71cd58fc.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71cd58fc.c:161:13: error: expected declaration or statement at end of input
